<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="15dp" >

    <TextView
        android:id="@+id/reimbursement_guidelines_title_text"
        style="@style/TextSizeStyle_20"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:text="@string/reimbursement_guidelines_title_str" />

    <cn.com.zte.tescobag.views.DashedLineView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/reimbursement_guidelines_title1_text"
        style="@style/TextSizeStyle_14"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/reimbursement_guidelines_title1_str"
        android:textColor="@color/HelpDetailTermsTextColor" />

    <TextView
        android:id="@+id/reimbursement_guidelines_one_title_text"
        style="@style/TextSizeStyle_18"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/reimbursement_guidelines_one_title_str" />

    <LinearLayout
        android:id="@+id/reimbursement_guidelines_one_terms_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/reimbursement_guidelines_one_terms_1"
            style="@style/TextSizeStyle_16"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/reimbursement_guidelines_one_terms_1_str"
            android:textColor="@color/HelpDetailTermsTextColor" />

        <TextView
            android:visibility="gone"
            android:id="@+id/reimbursement_guidelines_one_terms_2"
            style="@style/TextSizeStyle_16"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/reimbursement_guidelines_one_terms_2_str"
            android:textColor="@color/HelpDetailTermsTextColor" />

        <TextView
            android:visibility="gone"
            android:id="@+id/reimbursement_guidelines_one_terms_3"
            style="@style/TextSizeStyle_16"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/reimbursement_guidelines_one_terms_3_str"
            android:textColor="@color/HelpDetailTermsTextColor" />

        <TextView
            android:visibility="gone"
            android:id="@+id/reimbursement_guidelines_one_terms_4"
            style="@style/TextSizeStyle_16"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/reimbursement_guidelines_one_terms_4_str"
            android:textColor="@color/HelpDetailTermsTextColor" />

        <TextView
            android:visibility="gone"
            android:id="@+id/reimbursement_guidelines_one_terms_5"
            style="@style/TextSizeStyle_16"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/reimbursement_guidelines_one_terms_5_str"
            android:textColor="@color/HelpDetailTermsTextColor" />

        <TextView
            android:visibility="gone"
            android:id="@+id/reimbursement_guidelines_one_terms_6"
            style="@style/TextSizeStyle_16"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/reimbursement_guidelines_one_terms_6_str"
            android:textColor="@color/HelpDetailTermsTextColor" />

        <TextView
            android:visibility="gone"
            android:id="@+id/reimbursement_guidelines_one_terms_7"
            style="@style/TextSizeStyle_16"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/reimbursement_guidelines_one_terms_7_str"
            android:textColor="@color/HelpDetailTermsTextColor" />

        <TextView
            android:visibility="gone"
            android:id="@+id/reimbursement_guidelines_one_terms_8"
            style="@style/TextSizeStyle_16"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/reimbursement_guidelines_one_terms_8_str"
            android:textColor="@color/HelpDetailTermsTextColor" />
    </LinearLayout>
    
    <TextView
        android:id="@+id/reimbursement_guidelines_two_title_text"
        style="@style/TextSizeStyle_18"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/reimbursement_guidelines_two_title_str" />

    <LinearLayout
        android:id="@+id/reimbursement_guidelines_two_terms_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/reimbursement_guidelines_two_terms_1"
            style="@style/TextSizeStyle_16"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/reimbursement_guidelines_two_terms_1_str"
            android:textColor="@color/HelpDetailTermsTextColor" />

        <TextView
            android:id="@+id/reimbursement_guidelines_two_terms_2"
            style="@style/TextSizeStyle_16"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/reimbursement_guidelines_two_terms_2_str"
            android:textColor="@color/HelpDetailTermsTextColor" />
        <TextView
            android:id="@+id/reimbursement_guidelines_two_terms_3"
            style="@style/TextSizeStyle_16"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/reimbursement_guidelines_two_terms_3_str"
            android:textColor="@color/HelpDetailTermsTextColor" />
    </LinearLayout>
<TextView
        android:id="@+id/reimbursement_guidelines_three_title_text"
        style="@style/TextSizeStyle_18"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/reimbursement_guidelines_three_title_str" />
 <LinearLayout
        android:id="@+id/reimbursement_guidelines_three_terms_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/reimbursement_guidelines_three_terms_1"
            style="@style/TextSizeStyle_16"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/reimbursement_guidelines_three_terms_1_str"
            android:textColor="@color/HelpDetailTermsTextColor" />
        <TextView
            android:id="@+id/reimbursement_guidelines_three_terms_2"
            style="@style/TextSizeStyle_16"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/reimbursement_guidelines_three_terms_2_str"
            android:textColor="@color/HelpDetailTermsTextColor" />
    </LinearLayout>
</LinearLayout>