<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ControlBgColor"
    android:orientation="vertical" >

    <cn.com.zte.emeeting.app.views.TopBar
        android:id="@+id/topbar_joinMeeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#d7d7d7" >
    </cn.com.zte.emeeting.app.views.TopBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="90dp"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <EditText
                android:id="@+id/ed_joinMeeting_input"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/bg_joinmeeting_edittext"
                android:inputType="number"
                android:textColor="@color/ControlTvTitleColor"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="#a5a5a5" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_joinMeeting"
            android:layout_width="75dp"
            android:layout_height="fill_parent"
            android:background="#ff9600"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/AMJoinMeeting"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_joinmeeting_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/AMHintPhone"
            android:textColor="@color/ControlTvConColor"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_Out_PhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_joinmeeting_tip"
            android:layout_marginLeft="10dp"
            android:text="@string/AMOuterPhoneNumber"
            android:textColor="@color/ControlTvConColor"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_Out_PhoneNumberHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_Out_PhoneNumber"
            android:layout_marginLeft="10dp"
            android:text="@string/AMOuterPhoneNumberHint"
            android:textColor="@color/ControlTvConColor"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_invite_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#ff9600"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/AMPhonePeople"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

</LinearLayout>