<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:background="@color/white"
        >
        <TextView
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:id="@+id/tv_dlg_confirm_book_title"
            android:gravity="center"
            android:layout_height="60dp"
            android:layout_width="wrap_content"
            android:text="@string/service_book_suucess_hint"
            android:textSize="@dimen/textsize_meeting_big"
            android:textColor="@color/textcolor_gray_3"
            />
        
        <LinearLayout 
		    android:layout_height="40dp"
		    android:layout_width="fill_parent"
		    android:orientation="horizontal"
		    >
		    <Button 
		        android:id="@+id/btn_dlg_left"
		        android:layout_height="fill_parent"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:textSize="16sp"
		        android:textColor="@color/white"
		        android:text="@string/back"
		        android:background="#CCC"
		        />
		    <Button 
		        android:id="@+id/btn_dlg_right"
		        android:layout_height="fill_parent"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:textSize="16sp"
		        android:textColor="@color/white"
		        android:text="@string/service_book_suucess_config"
		        android:background="@color/bgcolor_filter_yellow"
		        />
		</LinearLayout>
    </LinearLayout>

</RelativeLayout>
