<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/ControlBgColor"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/meeting_control_time_extend" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/meeting_control_search"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bgshap_meeting_control_add_layout" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@+id/meeting_control_add"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/hint_meeting_seach"
                    android:textColor="@color/GrayTextColorA"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/meeting_control_add"
                    android:layout_width="75dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/bgshap_meeting_control_add"
                    android:gravity="center"
                    android:text="@string/hint_meeting_add"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/meeting_room_list"
                android:textColor="@color/textcolor_gray_9"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/ControlListViewDivider"
                android:paddingBottom="10dp"
                android:paddingTop="3dp" >

                <cn.com.zte.emeeting.app.views.SlideCutListView
                    android:id="@+id/meeting_control_listview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@color/ControlListViewDivider"
                    android:dividerHeight="5dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/meeting_control_time_extend"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="@color/bgcolor_filter_yellow"
        android:text="@string/meeting_control_time_extend"
        android:textColor="@color/white"
        android:textSize="16sp" />

</RelativeLayout>